# kwargs

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.py
example/: CMakeLists.txt  arguments.cpp  printing.cpp  simple.cpp
include/: kwargs.h
tests/: CMakeLists.txt  format.cpp  main.cpp
tests/formatting/: CMakeLists.txt  format.cpp  utos.cpp
tests/kwargs/: CMakeLists.txt  simple.cpp
tests/parsers/: CMakeLists.txt  capture_list.cpp  format_string.cpp
